--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "@types/uuid": "^10.0.0",
+    "@vercel/node": "^4.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "ts-node": "^10.9.2",
