--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "express": "^5.1.0",
+    "fast-xml-parser": "^5.3.2",
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
